# rag-atlas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.dev.yml  compose.yml  main.py  pyproject.toml
.kiro/specs/multi-agent-rag-system/: design.md  requirements.md  tasks.md
airflow/: Dockerfile  entrypoint.sh  requirements.txt
airflow/dags/: .gitkeep  sample_rag_pipeline.py
airflow/logs/: .gitkeep
airflow/plugins/: .gitkeep
alembic/: env.py
alembic/versions/: c4e02a7259e5_initial_database_schema.py
docs/: beginner-guide.md  code-walkthrough.md  database-explained.md  quick-reference.md  task1-project-setup-explained.md  task1-project-setup-walkthrough.md  task2-database-models-explained.md  task2-database-models-reference.md
examples/: repository_usage.py
notebooks/: 01_setup.ipynb
scripts/: db_setup.py  init-db.sql  start-infrastructure.sh
src/: __init__.py
src/agents/: base.py  orchestrator.py  research_agent.py  resume_agent.py
src/api/: dependencies.py  main.py  middleware.py
src/api/routes/: agents.py  health.py  research.py  resume.py
src/core/: config.py  logging.py
src/database/: __init__.py  connection.py  init_db.py  models.py
src/database/repositories/: __init__.py  base.py  factory.py  papers.py  resumes.py
src/models/: base.py  papers.py  resumes.py
src/services/: base.py
src/utils/: exceptions.py  helpers.py
tests/: conftest.py  test_health.py  test_infrastructure.py
